# ExoCode

./: .gitignore  .travis.yml  ATP.h  A_EXO_s_2_0_0.ino  A_EXO_s_2_0_1.ino  A_EXO_s_2_0_2.ino  A_EXO_s_2_0_4.ino  A_EXO_s_2_1_0.ino  A_EXO_s_2_1_1.ino  A_EXO_s_2_1_2.ino  A_Exo.ino  A_Exo_2_1_3.ino  A_Exo_2_1_5.ino  Adj_FSR_th.ino  Ambulation_SM.h  Arduino.cpp  Arduino.hpp  Auto_KF.h  Auto_KF.ino  Auto_KF_Knee.h  BT_Funcs.ino  Balance_Ctrl.ino  Baseline.ino  BatteryMonitor.cpp  BatteryMonitor.h  BioFeedback_functions.ino  Biofeedback_FSR.ino  Biofeedback_step.ino  Board.cpp  Board.h  Board.hpp  Board.ino  BoardBuilder.cpp  BoardBuilder.hpp  ByteTranscriber.cpp  ByteTranscriber.hpp  CMakeLists.txt  COP_Functions.ino  Calibrate_and_Read_Sensors.h  Calibrate_and_Read_Sensors.ino  (+169 more)
.travis/: CodeCoverage.cmake
AngleSensorCode/: AngleSensorCode.ino  utils.h
COP_Functions/: COP_Functions.ino
CommonCode/: Exo.h  Joint.h  Leg.cpp  Leg.h  Motor.h  SPI_Handler.h  TorqueSensor.h
Documentation/: AddingNewCanMotor.txt  AddingNewController.txt  AddingNewMicrocontroller.txt  ExoDataStructure.md  ExoStructure.md  FullDataStructure.txt  Guide.md  HipSystemComponentAssembly.md  Namespaces.md  README.md  SPIConOps.txt  StyleGuide.md
Documentation/AddingNew/: AddingNewBoard.md  AddingNewController.md  AddingNewController.txt  AddingNewItemToConfig.md  AddingNewMicrocontroller.md  AddingNewMotorType.md  AddingNewSensors.md
Documentation/Controllers/: Sine.md  Stasis.md  UserDefined.md  ZeroTorque.md
Exo/: ATP.h  Ambulation_SM.h  Auto_KF.h  BT_Funcs.ino  Biofeedback_step.ino  Board.h  Calibrate_and_Read_Sensors.ino  Control_Adjustment.h  Control_Adjustment.ino  ErrorReporter.h  Exo.ino  Filter_Parameters.h  Leg.h  Leg.ino  Msg_functions.h  Msg_functions.ino  PID_v2.cpp  PID_v2.h  Parameters.h  Read_and_write_EEPROM.ino  Receive_and_Transmit.ino  Reference_ADJ.h  Release Notes.txt  Shaping_Functions.ino  State_Machine.ino  Trial_Data.h  Variables.h  akxMotor.h  can.h  ema_filter.h  fault_detection.h  mcp2515.cpp  mcp2515.h  motor_utils.h  pid.ino  pot.ino  resetMotorIfError.h  resetMotorIfError.ino
Exo.ino/: Auto_KF.h  Balance_Ctrl.ino  Board.h  Check_LED_BT.ino  Control_Adjustment.h  Control_Adjustment.ino  IMU.h  Leg.h  Msg_functions.ino  Parameters.h  Read_and_write_EEPROM.ino  Receive_and_Transmit.ino  State_Machine.ino  pid.ino  receiveVals.ino  resetMotorIfError.ino
ExoCode/: ExoCode.ino
ExoCode/src/: .gitignore  AnkleAngles.cpp  AnkleAngles.h  AnkleIMU.cpp  Battery.cpp  Battery.h  BleMessage.cpp  BleMessage.h  BleMessageQueue.cpp  BleMessageQueue.h  BleParser.cpp  BleParser.h  Board.h  CAN.h  ComsMCU.cpp  ComsMCU.h  Config.h  Controller.cpp  Controller.h  ControllerData.cpp  ControllerData.h  ErrorManager.cpp  ErrorManager.h  Exo.cpp  Exo.h  ExoBLE.cpp  ExoBLE.h  ExoData.cpp  ExoData.h  FSR.cpp  FSR.h  GattDb.h  I2CHandler.h  InclinationDetector.cpp  InclinationDetector.h  InclineDetector.cpp  Joint.cpp  Joint.h  JointData.cpp  JointData.h  (+49 more)
ExoCode/systemCheck/: .gitignore  README.md
Libraries/: README.md
Libraries/Adafruit_BluefruitLE_nRF51/: Adafruit_ATParser.cpp  Adafruit_BLE.h  Adafruit_BluefruitLE_SPI.cpp
Libraries/SPISlave_T4/: SPISlave_T4.tpp
Libraries/TSPISlave/: TSPISlave.cpp  TSPISlave.h
NanoCode/: Board.h  IniFile.h  parseIni.cpp
Presentations/: 20220914_Pridham_NewCodeBase.pptx
SDCard/: config.ini
SDCard/ankleControllers/: PJMC.csv  calibrManager.csv  constantTorque.csv  perturbation.csv  ptbGeneral.csv  sine.csv  userDefined.csv  zeroTorque.csv  zhangCollins.csv
SDCard/hipControllers/: bangBang.csv  extensionAngle.csv  franksCollins.csv  gaitPhase.csv  heelToe.csv  perturbation.csv  ptbGeneral.csv  stasis.csv  userDefined.csv  zeroTorque.csv
SDCard/kneeControllers/: sine.csv  userDefined.csv  zeroTorque.csv
TeensyCode/: Board.h  Controller.cpp  Controller.h  FSR.h  Joint.cpp  Leg.h  Motor.cpp  Status_Led.h  Sync_Led.cpp  Sync_Led.h  parseIni.h
ThIMUCode/: ThIMUCode.ino
Timer_G/: TimerOne_G.cpp  TimerOne_G.h
Torque_Speed_ADJ_test.ino/: Torque_Speed_ADJ.ino  Torque_Speed_ADJ_test.ino.ino
doc/: Doxyfile
doc/html/: Arduino_8cpp.html  Arduino_8cpp__incl.map  Arduino_8cpp__incl.md5  Arduino_8hpp.html  Arduino_8hpp__dep__incl.map  Arduino_8hpp__dep__incl.md5  Arduino_8hpp__incl.map  Arduino_8hpp__incl.md5  Arduino_8hpp_source.html  BoardBuilder_8cpp.html  BoardBuilder_8cpp__incl.map  BoardBuilder_8cpp__incl.md5  BoardBuilder_8hpp.html  BoardBuilder_8hpp__dep__incl.map  BoardBuilder_8hpp__dep__incl.md5  BoardBuilder_8hpp__incl.map  BoardBuilder_8hpp__incl.md5  BoardBuilder_8hpp_source.html  Board_8cpp.html  Board_8cpp__incl.map  Board_8cpp__incl.md5  Board_8hpp.html  Board_8hpp__dep__incl.map  Board_8hpp__dep__incl.md5  Board_8hpp__incl.map  Board_8hpp__incl.md5  Board_8hpp_source.html  ByteTranscriber_8cpp.html  ByteTranscriber_8cpp__incl.map  ByteTranscriber_8cpp__incl.md5  ByteTranscriber_8hpp.html  ByteTranscriber_8hpp__dep__incl.map  ByteTranscriber_8hpp__dep__incl.md5  ByteTranscriber_8hpp_source.html  CMakeLists_8txt.html  Command__Codes_8hpp.html  Command__Codes_8hpp__dep__incl.map  Command__Codes_8hpp__dep__incl.md5  Command__Codes_8hpp_source.html  Commands_8cpp.html  (+1078 more)
doc/latex/: Arduino_8cpp.tex  Arduino_8cpp__incl.md5  Arduino_8hpp.tex  Arduino_8hpp__dep__incl.md5  Arduino_8hpp__incl.md5  BoardBuilder_8cpp.tex  BoardBuilder_8cpp__incl.md5  BoardBuilder_8hpp.tex  BoardBuilder_8hpp__dep__incl.md5  BoardBuilder_8hpp__incl.md5  Board_8cpp.tex  Board_8cpp__incl.md5  Board_8hpp.tex  Board_8hpp__dep__incl.md5  Board_8hpp__incl.md5  ByteTranscriber_8cpp.tex  ByteTranscriber_8cpp__incl.md5  (+409 more)
test/: CMakeLists.txt
test/mocks/port/: CMakeLists.txt  mockInputPort.hpp
test/mocks/transmission/: CMakeLists.txt  mockBasicTransmission.hpp
test/tests/motor/: CMakeLists.txt  testMotor.cpp
test/tests/transmission/: CMakeLists.txt  testArgs.cpp  testBaseTransmission.cpp  testBaseTransmission.hpp  testJointSelectBaseTransmission.cpp  testStartTrialTransmission.hpp
test/tests/utils/: CMakeLists.txt  testMax.cpp  testMin.cpp  testRange.cpp
(+148 files in other folders)
